--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @namdz608:registry=https://npm.pkg.github.com/namdz608
-//npm.npm.pkg.github.com/:_authToken=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
+//npm.pkg.github.com/:_authToken=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
