--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -21,7 +21,7 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: |
-          echo @namdz608:https://npm.pkg.github.com/ > build/.npmrc
+          echo '@namdz608:https://npm.pkg.github.com' > build/.npmrc
           echo '//npm.pkg.github.com/:_authToken:${NPM_TOKEN}' >>  build/.npmrc 
       - run: npm publish
         working-directory: ./build
