--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -22,7 +22,7 @@ jobs:
       - run: npm run build
       - run: |
           echo '@namdz608:https://npm.pkg.github.com' > build/.npmrc
-          echo '//npm.pkg.github.com/:_authToken:${NPM_TOKEN}' >>  build/.npmrc 
+          echo '//npm.pkg.github.com/:_authToken=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' >>  build/.npmrc 
       - run: npm publish
         working-directory: ./build
         env: 
