--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: "20.x"
       - run: npm ci
 
   publish-gpr:
@@ -27,13 +27,14 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: "20.x"
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
       - run: |
-          echo "@username:registry=https://npm.pkg.github.com" >> .npmrc
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> .npmrc
+          echo "@username:registry=https://npm.pkg.github.com" >> build/.npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> build/.npmrc
       - run: npm publish
+        working-directory: ./build
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
