--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           node-version: "20.x"
           registry-url: https://npm.pkg.github.com/
-      - run: npm ci
+      - run: npm run build
       - run: |
           ls -a
           echo "@username:registry=https://npm.pkg.github.com" >> build/.npmrc
