--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -33,13 +33,13 @@ jobs:
       - run: npm run build
       - run: |
           ls -a
-          echo ${{ secrets.GITHUB_TOKEN }}
+          echo $NODE_AUTH_TOKEN
           echo "@username:registry=https://npm.pkg.github.com" >> build/.npmrc
           echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> build/.npmrc
       - run: npm publish
         working-directory: ./build
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
 
