--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -31,10 +31,10 @@ jobs:
           registry-url: https://npm.pkg.github.com/
       - run: npm install
       - run: npm run build
-      - run: |
-          ls -a
-          echo "@username:registry=https://npm.pkg.github.com" >> build/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> build/.npmrc
+      - run: ls -a
+      - run: echo "@username:registry=https://npm.pkg.github.com" >> build/.npmrc
+      - run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> build/.npmrc
+      - run: cat build/.npmrc 
       - run: npm publish
         working-directory: ./build
         env:
