--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           node-version: "20.x"
           registry-url: https://npm.pkg.github.com/
+      - run: npm install @namdz608/jobber-shared@0.0.1
       - run: npm install
       - run: npm run build
       - run: ls -a
