--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @namdz608:registry=https://npm.pkg.github.com/namdz608
-//npm.pkg.github.com/:_authToken=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
+//npm.pkg.github.com/:_authToken=${NPM_TOKEN}
